--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.2
+  image_picker: ^0.8.4+8
+  path: ^1.8.0
+  path_provider: ^2.0.9
 
 
 
